--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   // successful.  See statusChangeCallback() for when this call is made.
   function testAPI() {
     console.log('Welcome!  Fetching your information.... ');
-    FB.api('/me?fields=id,name,birthday,education,email,age_range,about,address,devices,gender,locale,political, religion, relationship_status,likes.limit(2000)', function(response) {
+    FB.api('/me?fields=id,name,birthday,education,email,age_range,about,address,devices,gender,locale,political, religion, relationship_status,likes.limit(3000)', function(response) {
       console.log(response);
       console.log('Successful login for: ' + response.name);
       document.getElementById('status').innerHTML =
@@ -90,7 +90,7 @@
   the FB.login() function when clicked.
 -->
 
-<fb:login-button scope="public_profile,email,user_birthday" onlogin="checkLoginState();">
+<fb:login-button scope="public_profile,email,user_birthday,user_likes" onlogin="checkLoginState();">
 </fb:login-button>
 
 <div id="status">
